@@ -1,38 +1,37 @@
 package com.example.warehousesystem.service;
 
 import com.example.warehousesystem.dto.request.ImportOrderSearchRequest;
-import com.example.warehousesystem.dto.response.ImportOrderResponse;
-import com.example.warehousesystem.entity.ImportOrder;
-import com.example.warehousesystem.mapper.ImportOrderMapper;
-import com.example.warehousesystem.repository.ImportOrderRepository;
+import com.example.warehousesystem.dto.response.ImportOrderBoardResponse;
+import com.example.warehousesystem.entity.ImportOrderDetail;
+import com.example.warehousesystem.repository.ImportOrderDetailRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ImportOrderSearchService {
 
-    private final ImportOrderRepository importOrderRepository;
-    private final ImportOrderMapper importOrderMapper;
+    private final ImportOrderDetailRepository importOrderDetailRepository;
 
-    public List<ImportOrderResponse> searchImportOrders(ImportOrderSearchRequest request) {
-        // Xử lý date từ LocalDate → LocalDateTime
-        LocalDateTime start = request.getStartDate() != null ? request.getStartDate().atStartOfDay() : null;
-        LocalDateTime end = request.getEndDate() != null ? request.getEndDate().atTime(23, 59, 59) : null;
 
-        List<ImportOrder> results = importOrderRepository.searchImportOrders(
-                request.getSource(),
-                request.getStatus(),
-                request.getCreatedBy(),
-                start,
-                end
+    public List<ImportOrderBoardResponse> searchImportOrders(ImportOrderSearchRequest request) {
+        List<ImportOrderDetail> details = importOrderDetailRepository.searchImportOrdersV2(
+                request.getImportCode(),
+                request.getSkuCode(),
+                request.getCreatedAt()
         );
 
-        return results.stream()
-                .map(importOrderMapper::toResponse)
-                .toList();
+
+        return details.stream()
+                .map(d -> ImportOrderBoardResponse.builder()
+                        .importCode(d.getImportOrder().getImportCode())
+                        .skuCode(d.getSku().getSkuCode())
+                        .skuName(d.getSku().getName())
+                        .createdAt(d.getImportOrder().getCreatedAt()) // giữ nguyên LocalDateTime
+                        .build())
+                .collect(Collectors.toList());
     }
 }
